# palma_taboola

./: .dockerignore  .gcloudignore  .gitignore  Pipfile  README.md  broadcast.py  copy.sh  docker-compose.yml  main.py  models.py  pyproject.toml  requirements.txt
.github/workflows/: main.yaml
components/: getter.py  transformer.py
configs/: CampaignSummary.json  CampaignSummaryHourly.json  TopCampaignContent.json
models/: CampaignSummary.py  CampaignSummaryBrowser.py  CampaignSummaryCountry.py  CampaignSummaryHourly.py  CampaignSummaryOSFamily.py  CampaignSummaryOSVersion.py  CampaignSummaryRegion.py  TopCampaignContent.py  models.py
templates/: update_from_stage.sql
test/: test_auto.py  test_broadcast.py  test_manual.py  test_units.py
